Add simple SSL mechanism

--- a/OracleLinuxDevelopers/oraclelinux9/httpd/2.4/Dockerfile
+++ b/OracleLinuxDevelopers/oraclelinux9/httpd/2.4/Dockerfile
@@ -1,6 +1,11 @@
 FROM ghcr.io/oracle/oraclelinux:9
 
-RUN dnf install -y httpd && \
+RUN dnf install -y httpd mod_ssl && \
     rm -rf /var/cache/dnf
 
-CMD ["httpd", "-DFOREGROUND"]
+ENV CERTIFICATE_DIR /etc/pki/tls/certs
+ENV KEY_DIR /etc/pki/tls/private
+
+COPY ./entrypoint.sh /opt/entrypoint.sh
+
+CMD ["/opt/entrypoint.sh"]
