--- a/OracleLinuxDevelopers/oraclelinux9/httpd/2.4/Dockerfile
+++ b/OracleLinuxDevelopers/oraclelinux9/httpd/2.4/Dockerfile
@@ -3,8 +3,15 @@ FROM ghcr.io/oracle/oraclelinux:9
 RUN dnf install -y httpd mod_ssl && \
     rm -rf /var/cache/dnf
 
-ENV CERTIFICATE_DIR /etc/pki/tls/certs
-ENV KEY_DIR /etc/pki/tls/private
+RUN sed -i \
+    -e 's/^SSLCertificateFile .*/SSLCertificateFile \/certs\/fullchain.pem/g' \
+    -e 's/^SSLCertificateKeyFile .*/SSLCertificateKeyFile \/certs\/privkey.pem/g' \
+    /etc/httpd/conf.d/ssl.conf
+
+RUN mkdir -p /certs
+
+ENV CERTIFICATE_DIR /certs
+ENV KEY_DIR /certs
 
 COPY ./entrypoint.sh /opt/entrypoint.sh
 
