Install libararies required for patching OAS 2025

--- a/OracleAnalytics/patches/2025-patch/Dockerfile
+++ b/OracleAnalytics/patches/2025-patch/Dockerfile
@@ -37,6 +37,13 @@ FROM oracle/analyticsserver:2025
 # ------
 LABEL "maintainer"="Padam Bengani <padam.bengani@oracle.com>"
 
+# Install
+#-------------------------------------------------------------
+USER root
+
+# tools for applying patches
+RUN dnf install -y binutils make gcc glibc-devel && dnf clean all
+
 # Common ENV
 #-----------
 ENV OPATCH_NO_FUSER=true
