--- a/OracleDatabase/RAC/OracleRealApplicationClusters/containerfiles/19.3.0/Containerfile
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/containerfiles/19.3.0/Containerfile
@@ -135,6 +135,7 @@ RUN chmod 755 $INSTALL_SCRIPTS/*.sh  && \
     $INSTALL_DIR/install/$SETUP_LINUX_FILE && \
     $INSTALL_DIR/install/$GRID_SETUP_FILE && \
     $INSTALL_DIR/install/$DB_SETUP_FILE && \
+    rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage && \
     sync
 
 #############################################
@@ -171,6 +172,7 @@ RUN chmod 755 $INSTALL_SCRIPTS/*.sh  && \
     $INSTALL_DIR/install/$SETUP_LINUX_FILE && \
     $INSTALL_DIR/install/$GRID_SETUP_FILE && \
     $INSTALL_DIR/install/$DB_SETUP_FILE && \
+    rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage && \
     sync
 
 
@@ -184,9 +186,15 @@ FROM rac-image-slim-${SLIMMING} AS builder
 ARG SLIMMING
 # hadolint ignore=DL3006
 ARG VERSION
+# Linux Env Variable
+ENV GRID_BASE=/u01/app/grid \
+    GRID_HOME=/u01/app/19c/grid \
+    DB_BASE=/u01/app/oracle \
+    DB_HOME=/u01/app/oracle/product/19c/dbhome_1
 COPY $VERSION/$INSTALL_GRID_BINARIES_FILE $VERSION/$GRID_SW_INSTALL_RSP $VERSION/$DB_SETUP_FILE $VERSION/$DB_INSTALL_RSP $VERSION/$INSTALL_DB_BINARIES_FILE $VERSION/$ENABLE_RAC_FILE $VERSION/$GRID_HOME_CLEANUP $VERSION/$ORACLE_HOME_CLEANUP $VERSION/$INSTALL_FILE_1* $VERSION/$INSTALL_FILE_2*  $INSTALL_SCRIPTS/
 # hadolint ignore=SC2086
-RUN chmod 755 $INSTALL_SCRIPTS/*.sh
+RUN chmod 755 $INSTALL_SCRIPTS/*.sh && \
+    rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage
 
 ## Install software if SLIMMING is false
 # hadolint ignore=SC2086
@@ -202,6 +210,7 @@ RUN if [ "${SLIMMING}x" != 'truex' ]; then \
       $DB_HOME/root.sh && \
       su  $GRID_USER -c "$INSTALL_SCRIPTS/$GRID_HOME_CLEANUP" && \
       su  $DB_USER -c "$INSTALL_SCRIPTS/$ORACLE_HOME_CLEANUP" && \
+      rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage && \
       :; \
     fi
 # hadolint ignore=SC3014
@@ -211,6 +220,7 @@ RUN if [ "${SLIMMING}x" == 'truex' ]; then \
     fi
 # hadolint ignore=SC2086
 RUN rm -f $INSTALL_DIR/install/* && \
+    rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage && \
     sync
 
 #############################################
@@ -220,6 +230,11 @@ RUN rm -f $INSTALL_DIR/install/* && \
 #############################################
 # hadolint ignore=DL3006
 FROM rac-image-slim-${SLIMMING} AS final
+ENV GRID_BASE=/u01/app/grid \
+    GRID_HOME=/u01/app/19c/grid \
+    DB_BASE=/u01/app/oracle \
+    DB_HOME=/u01/app/oracle/product/19c/dbhome_1
+RUN rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage
 # hadolint ignore=DL3006
 COPY  --from=builder /u01 /u01
 # hadolint ignore=SC2086
@@ -245,6 +260,7 @@ RUN if [ "${SLIMMING}x" != 'truex' ]; then \
     rm -f /etc/sysctl.d/99-oracle-database-preinstall-19c-sysctl.conf && \
     rm -f /etc/sysctl.d/99-sysctl.conf && \
     rm -f $INSTALL_DIR/install/* && \
+    rm -rf $DB_HOME/.patch_storage $DB_HOME/.opatchauto_storage $GRID_HOME/.patch_storage $GRID_HOME/.opatchauto_storage && \
     sync
 
 USER ${USER}
