New Code Owner for REST Data Services

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -19,7 +19,7 @@
 /OracleInternetDirectory/  @manjunathdhegde-2910 @kuldeepbshah
 /OracleJava/               @aureliogrb
 /OracleLinuxDevelopers/    @Djelibeybi @AmedeeBulle
-/OracleRestDataServices/   @gvenzl
+/OracleRestDataServices/   @chrishoina
 /OracleSOASuite/           @knvijay @rdas0405
 /OracleUnifiedDirectory/   @kuldeepbshah
 /OracleUnifiedDirectorySM/ @kuldeepbshah
