--- a/OracleJava/11/Dockerfile.ol8
+++ b/OracleJava/11/Dockerfile.ol8
@@ -8,28 +8,27 @@
 #
 # ARGS
 # ----
-# This docker file requires two arguments:
-# 1) JDK11_TOKEN is a valid dowload token for JDK 11.  It can be created in cloud.oracle.com/jms under Java Download
+# This docker file requires one argument:
+# JDK11_TOKEN is a valid dowload token for JDK 11.  It can be created in cloud.oracle.com/jms under Java Download
 # Token generation is documented on https://docs.cloud.oracle.com/en-us/iaas/jms/doc/java-download.html
-# 2) OCI_REGION is the Oracle Cloud Infrastucture (OCI) region where the token is generated.
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
 # This dockerfile will download a copy of latest version of JDK 11 from
-#	https://javamanagementservice-download.<OCI_REGION>.oci.oraclecloud.com/java/11/latest/
+#	https://java.oraclecloud.com/java/11/latest/
 #
 # It will use either x64 or aarch64 depending on the target platform
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Run:
-#      $ docker build --file Dockerfile.ol8 --tag oracle/jdk:11 --build-arg JDK11_TOKEN=<token> --build-arg OCI_REGION=<region> .
+#      $ docker build --file Dockerfile.ol8 --tag oracle/jdk:11 --build-arg JDK11_TOKEN=<token> .
 #
 # The builder image will be used to uncompress the tar.gz file with the Java Runtime.
 
 FROM oraclelinux:8 as builder
 ARG JDK11_TOKEN
-ARG OCI_REGION
+
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
@@ -43,7 +42,7 @@ ENV LANG en_US.UTF-8
 # Environment variables for the builder image.
 # Required to validate that you are using the correct file
 
-ENV JAVA_URL=https://javamanagementservice-download."${OCI_REGION}".oci.oraclecloud.com/java/11/latest/ \
+ENV JAVA_URL=https://java.oraclecloud.com/java/11/latest/ \
     JAVA_HOME=/usr/java/jdk-11
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
