--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,7 +9,7 @@
 /OracleAccessManagement/   @manjunathdhegde-2910
 /OracleBI/                 @sjvp
 /OracleCoherence/          @thegridman
-/OracleDatabase/           @gvenzl
+/OracleDatabase/           @yunus-qureshi
 /OracleDatabase/RAC/       @psaini79
 /OracleFMWInfrastructure/  @mriccell
 /OracleGoldenGate/         @masubram @sahudebasish
